--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             <div class="destination" id="scotland">
                 <h2>Scotland</h2>
             </div>
+
+            <div class="destination" id="pakistan">
+                <h2>Pakistan</h2>
+            </div>
         </div>
     </div>
 
